--- a/site/index.html
+++ b/site/index.html
@@ -54,8 +54,8 @@
                 <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
             </li>
             <li id="phone" class="hidden-xs">
-              <a href="tel:410-602-5008">
-                <span>410-602-5008</span></a><div>* We Deliver</div>
+              <a href="tel:410-685-5459">
+                <span>410-685-5459/span></a><div>* We Deliver</div>
             </li>
           </ul><!-- #nav-list -->
         </div><!-- .collapse .navbar-collapse -->
@@ -64,9 +64,9 @@
   </header>
 
   <div id="call-btn" class="visible-xs">
-    <a class="btn" href="tel:410-602-5008">
+    <a class="btn" href="tel:410-685-5459">
     <span class="glyphicon glyphicon-earphone"></span>
-    410-602-5008
+    410-685-5459
     </a>
   </div>
   <div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
@@ -87,7 +87,7 @@
           <span>Address:</span><br>
           7105 Reisterstown Road<br>
           Baltimore, MD 21215
-          <p>* Delivery area within 3-4 miles, with minimum order of $20 plus $3 charge for all deliveries.</p>
+          <p>* Delivery area within 3-4 miles, with minimum order of $30 plus $3 charge for all deliveries.</p>
           <hr class="visible-xs">
         </section>
         <section id="testimonials" class="col-sm-4">
