--- a/site/index.html
+++ b/site/index.html
@@ -55,7 +55,7 @@
             </li>
             <li id="phone" class="hidden-xs">
               <a href="tel:410-685-5459">
-                <span>410-685-5459/span></a><div>* We Deliver</div>
+                <span>410-685-5459</span></a><div>* We Deliver</div>
             </li>
           </ul><!-- #nav-list -->
         </div><!-- .collapse .navbar-collapse -->
@@ -95,7 +95,7 @@
           <p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
         </section>
       </div>
-      <div class="text-center">&copy; Copyright David Chu's China Bistro 2016</div>
+      <div class="text-center">&copy; Copyright David Chu's China Bistro 2020</div>
     </div>
   </footer>
 
